--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,16 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
+/* SCROLL  */
+
+::-webkit-scrollbar {
+  width: 0px;
+}
 
 
-/* LOGO  */
+
+
+
 
 
 
@@ -46,6 +53,8 @@ background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+
 
 @keyframes textShine {
   0% {
