--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body{
 
 ::-webkit-scrollbar {
   width: 0px;
+  height: 0px;
 }
 
 
@@ -27,31 +28,26 @@ body{
 
 
 
-.linear-wipe {
-  background: linear-gradient(
-    to right,
-    #FAACA8 20%,
-    #d68783 30%,
-    #9e91c9 70%,
-    #634bb2 80%
-  );
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  background-size: 500% auto;
-  animation: textShine 5s ease-in-out infinite alternate;
-}
+
+
 
 .background-gradient{
- background-color: #FBAB7E;
-background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);  
 }
 
 .text-gradient{
-   background: -webkit-linear-gradient(#FBAB7E, #F7CE68);
+   background: -webkit-linear-gradient(#4158D0, #C850C0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.limit {
+   overflow: hidden;
+   display: -webkit-box;
+   -webkit-line-clamp: 2;
+           line-clamp: 2; 
+   -webkit-box-orient: vertical;
 }
 
 
@@ -62,5 +58,19 @@ background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
   }
   100% {
     background-position: 100% 50%;
+  }
+}
+
+.round {
+  animation: round 10s linear infinite;
+  transform-origin: center center;
+}
+
+@keyframes round {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
