--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@300;500;700;800&family=Poppins:wght@300;500;700&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: 'Montserrat', sans-serif;
+  background-color: #f0f0f0;
 }
 
 /* SCROLL  */
@@ -21,33 +22,65 @@ body{
   height: 0px;
 }
 
-
-
-
-
-
-
-
-
-
-
-.background-gradient{
-  background-color: #4158D0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);  
+.background-day {
+  background-image: url(https://cdna.artstation.com/p/assets/images/images/012/252/242/4k/f-a-herold-summervillage-day.jpg?1533827344);
+  background-size: cover;
+  background-position: center;
 }
 
-.text-gradient{
-   background: -webkit-linear-gradient(#4158D0, #C850C0);
+.background-night {
+  background-image: url(https://cdnb.artstation.com/p/assets/images/images/012/252/245/4k/f-a-herold-summervillage-night.jpg?1533827363);
+  background-size: cover;
+  background-position: center;
+}
+
+.switch {
+  width: 4rem;
+  height: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 50px;
+  padding: 0.3rem;
+  cursor: pointer;
+}
+
+.switch[data-isOn="true"] {
+  justify-content: flex-end;
+}
+
+.handle {
+  width: 1.4rem;
+  height: 1.4rem;
+  background-color: white;
+  border-radius: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+.background-gradient {
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+}
+
+.text-gradient {
+  background: -webkit-linear-gradient(#4158D0, #C850C0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .limit {
-   overflow: hidden;
-   display: -webkit-box;
-   -webkit-line-clamp: 2;
-           line-clamp: 2; 
-   -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 
@@ -56,6 +89,7 @@ body{
   0% {
     background-position: 0% 50%;
   }
+
   100% {
     background-position: 100% 50%;
   }
@@ -70,6 +104,7 @@ body{
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
