--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,8 @@ body {
 }
 
 .background-day-3 {
-  background-image: url(https://cdna.artstation.com/p/assets/images/images/057/058/906/large/arseniy-chebynkin-michael-room-night-sermet.jpg?1670736827);
-  background-size: 120%;
+  background-image: url(https://cdna.artstation.com/p/assets/images/images/046/346/002/large/erik-arias-mossy-forest-moss-render0001.jpg?1644906576);
+  background-size: cover;
   background-position: center;
 }
 
@@ -75,8 +75,8 @@ body {
 }
 
 .background-night-3 {
-  background-image: url(https://cdna.artstation.com/p/assets/images/images/057/057/794/large/arseniy-chebynkin-michael-room-night.jpg?1670730876);
-  background-size: 120%;
+  background-image: url(https://cdnb.artstation.com/p/assets/images/images/046/346/397/large/erik-arias-wellside-hiker-night.jpg?1644908013);
+  background-size: cover;
   background-position: center;
 }
 
