--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,23 @@ body {
 /* SCROLL  */
 
 ::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
+  width: 0.5rem;
+
 }
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+  
 
 .background-day-0 {
   background-image: url(https://cdna.artstation.com/p/assets/images/images/057/246/862/large/chx-asset.jpg?1671123507);
